--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: devops-kubernetes-api-service
+  name: kubernetes-demo-api
   labels:
-    app: devops-kubernetes-api
+    app: kubernetes-demo-api
 spec:
   selector:
-    app: devops-kubernetes-api
+    app: kubernetes-demo-api
   ports:
     - protocol: TCP
       port: 3000 # Service port
